# etf_strategy_system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backtest/: __init__.py  attribution.py  bt_slippage.py  bt_strategy.py
bank_analyzer/: __init__.py  bank_data.py  bank_pain_points.py  bank_report.py  bank_scorer.py
bank_analyzer/templates/: bank_report.html
config/: __init__.py  settings.py
core/: __init__.py  ensemble.py  feature_utils.py  risk_controller.py  strategy.py
data_pipeline/: __init__.py  cleaner.py  db_manager.py  fetcher.py  models.py  vector_store.py
engine/: __init__.py  analyzers.py  backtest.py  commissions.py
factors/: __init__.py  causal.py  factor_registry.py  technical.py
models/: metadata.pkl  xgboost_etf.json  xgboost_etf.pkl  xgboost_etf.xgb  xgboost_reg_21d.pkl  xgboost_reg_21d.xgb  xgboost_reg_5d.pkl  xgboost_reg_5d.xgb  xgboost_reg_63d.pkl  xgboost_reg_63d.xgb
models/rl/: ppo_portfolio_meta.json  ppo_portfolio_smoke_meta.json
prediction/: __init__.py  evaluator.py  pipeline.py  regressor.py  schemas.py
recommendation/: __init__.py  output.py  pipeline.py  ranker.py  schemas.py
report/: __init__.py  renderer.py  scoring.py
report/templates/: report.html
rl/: __init__.py  agent.py  callbacks.py  env.py  features.py  policy.py
scoring/: __init__.py  etf_scorer.py  factors_fund.py  factors_index.py  factors_issuer.py  modulation.py
scripts/: analyze_banks.py  evaluate_predictions.py  evaluate_rl_agent.py  fetch_macro_data.py  generate_live_report.py  generate_report.py  generate_sentiment.py  retrain_model.py  run_backtest.py  run_demo.py  run_pipeline.py  run_sentiment.py  seed_metadata.py  test_pipeline.py  train_rl_agent.py  validate_scoring.py
sentiment/: __init__.py  claude_client.py  deepseek_batch.py  parser.py  prompts.py
strategy/: __init__.py  optimizer.py
tests/: conftest.py  test_scoring.py
tests/test_backtest/: test_backtest.py
(+10 files in other folders)
