[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etf_strategy_system"
version = "0.1.0"
description = "Production-grade ETF quantitative strategy system with six decoupled core modules"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Quant Research Team"}]
keywords = ["quantitative-finance", "etf", "backtesting", "causal-inference", "sentiment-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "yfinance>=0.2.40",
    "sqlalchemy>=2.0.30",
    "pymysql>=1.1.1",
    "chromadb>=0.5.0",
    "anthropic>=0.34.0",
    "pandas-ta>=0.3.14b0",
    "linearmodels>=6.0",
    "xgboost>=2.1.0",
    "backtrader>=1.9.78.123",
    "jinja2>=3.1.4",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "sentence-transformers>=3.0.0",
    "matplotlib>=3.9.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.5.0",
    "stable-baselines3>=2.3.0",
    "gymnasium>=0.29.0",
    "torch>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
etf-pipeline = "scripts.run_pipeline:main"
etf-backtest = "scripts.run_backtest:main"
etf-report = "scripts.generate_report:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "data_pipeline*", "sentiment*", "factors*", "core*", "backtest*", "report*", "scripts*", "scoring*", "recommendation*", "prediction*", "rl*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
